--- a/src/components/sections/IndustriesSection.css
+++ b/src/components/sections/IndustriesSection.css
@@ -1,8 +1,8 @@
 /* Industries Scroll Section */
 .industries-scroll-section {
     position: relative;
-    height: 400vh;
-    /* Determines the scroll length */
+    height: 500vh;
+    /* Increased for smoother scrolling of all cards */
     background-color: #EBE9E4;
 }
 
@@ -33,6 +33,8 @@
     gap: 2rem;
     padding-left: 4rem;
     /* Initial offset */
+    padding-right: 4rem;
+    /* Ensure last card has room */
 }
 
 .industry-card-horizontal {
@@ -74,6 +76,11 @@
     color: #111;
     margin-bottom: 1rem;
     line-height: 1.2;
+}
+
+.highlight-serve {
+    color: #EA4335;
+    /* Google Red/Pinkish */
 }
 
 .industries-intro {
